# exquAIro-Househunter

./: 190322 - HouseTable_vDef_excel.xlsx  README.md  config.yaml  pyproject.toml  script_househunter.ipynb
Scripts/: formatting_functions.py  modeling_functions.py  performance_metrics_functions.py  plotting_functions.py
